<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tello_driver</name>
    <version>1.0.0</version>
    <description>Simple ROS wrapper to control a DJI Tello drone.</description>
    <maintainer email="pmbs.123@gmail.com">Pedro Soares</maintainer>
    <license>BSD3</license>


    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
