<?xml version="1.0"?>
<package format="2">

  <name>tello_launchers</name>
  <version>1.0.0</version>
  <description>ROS metapackage for drone autonomous operations</description>

  <maintainer email="pmbs.12@hotmail.com">Pedro Soares</maintainer>
  <maintainer email="alessandro.giffra.001@uni.lu">Alessandro Giffra</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
