<?xml version="1.0"?>
<package format="2">

  <name>tello_driver_ros_wrapper</name>
  <version>0.0.1</version>
  <description>ROS metapackage to control a DJI Tello drone</description>

  <maintainer email="pmbs.12@hotmail.com">Pedro Soares</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--all the packages of the suite -->
  <exec_depend>tello_driver</exec_depend>
  <exec_depend>tello_msgs</exec_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
