<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tello_metapackage</name>
  <version>1.0.0</version>
  <description>A package to aggregate all packages of the tello_driver_ros_wrapper</description>
  <maintainer email="pmbs.123@gmail.com">Pedro Soares</maintainer>
  <license>BSD 3-Clause License</license>
  <!-- packages in my_project -->
  <exec_depend>tello_msgs</exec_depend>
  <exec_depend>tello_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
