<?xml version="1.0"?>
<package format="2">
  <name>tello_msgs</name>
  <version>0.0.0</version>
  <description>The tello_ros_wrapper package</description>

  <maintainer email="pmbs.12@hotmail.com">pedros235</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
