<?xml version="1.0"?>
<package format="2">
  <name>tello_msgs</name>
  <version>0.0.1</version>
  <description>Contains ROS messages to be used with tello_driver package</description>

  <maintainer email="pmbs.12@hotmail.com">Pedro Soares</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
